--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
   <body>
     <hello-world type="amazing">Light DOM fallback</hello-world>
-    <script type="module" src="./out-tsc/src/hello-world.js"></script>
+    <script type="module" src="./src/hello-world.ts"></script>
   </body>
 </html>
