--- a/api-viewer.html
+++ b/api-viewer.html
@@ -5,7 +5,7 @@
     <script type="module">
       import 'api-viewer-element';
     </script>
-    <script type="module" src="./out-tsc/src/hello-world.js"></script>
+    <script type="module" src="./dist/assets//index.167ab1b5.js"></script>
     <title>LIT Hello world - API viewer</title>
   </head>
 
