Update deps, add counter example

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   <body>
     <hello-world type="amazing">Light DOM fallback</hello-world>
+    <my-counter></my-counter>
     <script type="module" src="./src/hello-world.ts"></script>
+    <script type="module" src="./src/counter.ts"></script>
   </body>
 </html>
