Add motion example

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LIT Hello world</title>
+    <style>
+      body {
+        background-color: #101010;
+        color: #F6F7FC;
+      }
+    </style>
   </head>
 
   <body>
     <hello-world type="amazing">Light DOM fallback</hello-world>
     <my-counter></my-counter>
+    <my-motion></my-motion>
     <script type="module" src="./src/hello-world.ts"></script>
     <script type="module" src="./src/counter.ts"></script>
+    <script type="module" src="./src/motion.ts"></script>
   </body>
 </html>
